# dragonheart_kernel_motorola_cancunf

./: MAINTAINERS  Makefile  build.config.cancunf  kramel.sh  version
arch/arm64/: Kconfig  Makefile
block/: bio.c
crypto/: Kconfig  Makefile
drivers/: Kconfig  Makefile
drivers/android/: binder.c  binder_alloc.c
drivers/hid/: Kconfig  hid-ids.h
drivers/iommu/: mtk_iommu.c  mtk_iommu.h
drivers/leds/: leds-mtk-disp.c  leds-mtk-pwm.c  regulator-vibrator.c
drivers/lindroid-drm-loopback/: evdi_drm_drv.c
drivers/misc/: Kconfig  Makefile
drivers/mmi_info/: Android.mk  BUILD.bazel  Kbuild
drivers/mmi_relay/: Android.mk  BUILD.bazel  Kbuild
drivers/moto_f_mass_storage/: Android.mk  Kbuild  Kconfig
drivers/moto_f_usbnet/: Android.mk  Kbuild  Kconfig
drivers/nfc/: Kconfig  Makefile
drivers/power/: Kconfig  Makefile
drivers/power/qpnp_adaptive_charge/: Android.mk  BUILD.bazel  Kbuild  Kconfig
drivers/pwm/: pwm-mtk-disp.c
drivers/regulator/: Kconfig  Makefile  core.c  mt6360-regulator.c
drivers/rtc/: Kconfig  Makefile
drivers/sensors/: Android.mk  BUILD.bazel  Kbuild
drivers/spmi/: spmi-mtk-pmif-core.c
fs/: coredump.c
fs/erofs/: decompressor.c
fs/f2fs/: f2fs.h  node.c
fs/incfs/: data_mgmt.c
include/linux/: moduleparam.h  page-flags.h
init/: Kconfig
kernel/: Makefile  gen_kheaders.sh  module.c  signal.c
kernel/irq/: irqdesc.c
kernel/printk/: printk.c  printk_ringbuffer.c
kernel/sched/: cpufreq_schedutil.c  (+1 more)
mm/: Kconfig  Makefile  memcontrol.c  vmscan.c
net/: Kconfig
scripts/: Makefile.clang  Makefile.lib  mkcompile_h
(+474 files in other folders)
